// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on desktop with mentions badge 1`] = `
<CopyUrlContextMenu
  link="test-link"
  menuId="test-channel-id"
>
  <button
    className="btn btn-link test-class"
    onClick={[Function]}
  >
    <SidebarChannelButtonOrLinkIcon
      channelId="test-channel-id"
      channelStatus="test"
      channelType="D"
      membersCount={3}
      teammateDeletedAt={1}
      teammateId="test-teammate-id"
    />
    <span
      className="sidebar-item__name"
    >
      test-channel-name
    </span>
    <span
      className="badge"
    >
      6
    </span>
    <SidebarChannelButtonOrLinkCloseButton
      badge={true}
      channelId="test-channel-id"
      channelType="D"
      handleClose={[Function]}
      teammateId="test-teammate-id"
    />
  </button>
</CopyUrlContextMenu>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on desktop without badge 1`] = `
<CopyUrlContextMenu
  link="test-link"
  menuId="test-channel-id"
>
  <button
    className="btn btn-link test-class"
    onClick={[Function]}
  >
    <SidebarChannelButtonOrLinkIcon
      channelId="test-channel-id"
      channelStatus="test"
      channelType="D"
      membersCount={3}
      teammateDeletedAt={1}
      teammateId="test-teammate-id"
    />
    <span
      className="sidebar-item__name"
    >
      test-channel-name
    </span>
    <SidebarChannelButtonOrLinkCloseButton
      channelId="test-channel-id"
      channelType="D"
      handleClose={[Function]}
      teammateId="test-teammate-id"
    />
  </button>
</CopyUrlContextMenu>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on non-desktop with mentions badge 1`] = `
<Link
  className="test-class"
  onClick={[Function]}
  onlyActiveOnIndex={false}
  style={Object {}}
  to="test-link"
>
  <SidebarChannelButtonOrLinkIcon
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    membersCount={3}
    teammateDeletedAt={1}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    test-channel-name
  </span>
  <span
    className="badge"
  >
    6
  </span>
  <SidebarChannelButtonOrLinkCloseButton
    badge={true}
    channelId="test-channel-id"
    channelType="D"
    handleClose={[Function]}
    teammateId="test-teammate-id"
  />
</Link>
`;

exports[`component/sidebar/sidebar_channel_button_or_link/SidebarChannelButtonOrLink should match snapshot, on non-desktop without badge 1`] = `
<Link
  className="test-class"
  onClick={[Function]}
  onlyActiveOnIndex={false}
  style={Object {}}
  to="test-link"
>
  <SidebarChannelButtonOrLinkIcon
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    membersCount={3}
    teammateDeletedAt={1}
    teammateId="test-teammate-id"
  />
  <span
    className="sidebar-item__name"
  >
    test-channel-name
  </span>
  <SidebarChannelButtonOrLinkCloseButton
    channelId="test-channel-id"
    channelType="D"
    handleClose={[Function]}
    teammateId="test-teammate-id"
  />
</Link>
`;
